# ros-and-carla

./: README.md
CARLA/: [ADD_REMARK}manual_control.py  [DEVELOP]simulator.py  si_manual_control.py  test_manual_control.py
CARLA/carla-examples/: README.md  dynamic_weather.py
CARLA/ros-bridge/carla_ackermann_control/src/carla_ackermann_control/: carla_ackermann_control_noda.py
CARLA/ros-bridge/carla_ego_vehicle/src/carla_ego_vehicle/: carla_ego_vehicle.py
ROSwithAutoD/.catkin_tools/profiles/default/: devel_collisions.txt
ROSwithAutoD/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
ROSwithAutoD/devel/.private/VisionWithRos/: .rosinstall  _setup_util.py  local_setup.sh
ROSwithAutoD/devel/.private/VisionWithRos/lib/VisionWithRos/: LaneDetect
ROSwithAutoD/devel/.private/VisionWithRos/lib/pkgconfig/: VisionWithRos.pc
ROSwithAutoD/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall
ROSwithAutoD/devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
ROSwithAutoD/devel/lib/VisionWithRos/: LaneDetect
ROSwithAutoD/devel/lib/pkgconfig/: VisionWithRos.pc  catkin_tools_prebuild.pc
ROSwithAutoD/devel/share/VisionWithRos/cmake/: VisionWithRosConfig-version.cmake  VisionWithRosConfig.cmake
ROSwithAutoD/devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
ROSwithAutoD/src/VisionWithRos/: CMakeLists.txt
ROSwithAutoD/src/VisionWithRos/src/: LaneDetect.cpp
(+2 files in other folders)
